# safety-aware-lampc-cbf-reproduction

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
configs/: cs1_confirmatory_120_instances.json  cs1_confirmatory_120_plan_v1.json  cs1_confirmatory_nim_slack_v1.json  cs1_confirmatory_prereg_v1.md  cs1_confirmatory_soft_slack_v1.json  paper_fidelity.json  paper_fidelity_nvidia_nim.json  paper_fidelity_nvidia_nim_llama31.json  paper_fidelity_v2_eq18_static.json  paper_fidelity_v3_eq18_static.json  safe_panda_3d_avoidance_50_setup.json  safe_panda_8d_double_integrator_50_setup.json  safe_panda_core_deadtime_margin_v1.json  safe_panda_core_nim_feedback_v1.json  safe_panda_core_nim_soft_slack_feedback_v1.json  safe_panda_core_prediction_feedback_v1.json  safe_panda_core_scenarios_150_instances.json  safe_panda_core_scenarios_150_plan.json  safe_panda_core_scripted_feedback_v1.json  safe_panda_core_soft_slack_v1.json  safe_panda_core_velocity_tube_v1.json  table4_candidate_50_scenarios.json
docs/: 3D_AVOIDANCE_DEMO.md  CLAIM_REASSESSMENT_500.md  CLEAN_ROOM_STRATEGY.md  COLLISION_CONE_LIVENESS_PROTOCOL.md  DPCBF_ABLATION.md  EXPERIMENT_PIPELINE_DIAGRAM.md  FORMAL_SAFETY_CONTROLLER_CONFIRMATORY_V4.md  FORMAL_SAFETY_LATENCY_PROTOCOL_V5.md  GITHUB_REPOSITORY_REGISTRY.md  GPT4O_ALIGNMENT_PROBE.md  HARD_SCENE_STUDY.md  HF_LLM_INTEGRATION.md  LANGUAGE_ALIGNMENT_N2A1.md  LANGUAGE_GUIDED_PICK_PLACE.md  MASTER_PLAN_SETUP.md  NEXT_THREAD_HANDOFF.md  PAPER_FIDELITY_DEVIATION_REGISTRY.md  PROACTIVE_CBF_ONLINE_FEEDBACK_PROTOCOL_V2.md  README.md  REPRODUCIBILITY.md  SAFE_PANDA_3D_PROVIDER_50_RESULT.md  SAFE_PANDA_8D_50_PER_CATEGORY_REANALYSIS.md  SAFE_PANDA_CORE_SCENARIOS_150_RESULT.md  SAFE_PANDA_CORE_SCENARIO_PLAN.md  SAFE_PANDA_SCENARIO_EDITOR.md
scripts/: collect_safe_panda_3d_feedback.py  collect_safe_panda_8d_feedback.py  prepare_safe_panda_core_scenarios.py  render_arms_figure.py  render_build_l_scene.py  render_gamma_sweep_figure.py  render_hard_scene_examples.py  render_language_alignment_smoke.py  render_nim_slack_episode.py  render_safe_panda_3d_feedback_episode.py  render_safe_panda_3d_gamma_sweep.py  run_3d_avoidance_demo.py  run_build_l_mpc_cbf.py  run_code_as_policies_ablation.py  run_github_models_alignment_fewshot.py  run_github_models_alignment_paraphrase.py  run_github_models_alignment_smoke.py  run_hard_scene_study.py  run_hf_configured_mpc_cbf.py  run_hf_gamma_smoke.py  run_language_alignment_smoke.py  run_language_guided_pick_place.py  run_liveness_development.py  run_nvidia_nim_alignment_probe.py  run_nvidia_nim_alignment_smoke.py  run_paired_benchmark.py  run_remediation_benchmark.py  run_safe_panda_3d_benchmark.py  run_safe_panda_3d_scenario_editor.py  run_safe_panda_8d_benchmark.py  run_safe_panda_core_scenarios.py  run_safe_panda_mpc_cbf.py  run_safe_panda_scenario_editor.py  (+2 more)
(+123 files in other folders)
