[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-aware-lampc-cbf"
version = "0.1.0"
description = "Reproduction of language-guided MPC-CBF safe manipulation"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
simulation = [
    "casadi==3.7.2",
    "do-mpc==5.1.1",
    "panda-gym @ git+https://github.com/OtisMcLeary-123/Safe-panda-gym.git@97a7bbf6c619e5e20ba3bde3c5f423b435a3062a",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
