[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-aware-lampc-cbf"
version = "0.1.0"
description = "Reproduction of language-guided MPC-CBF safe manipulation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Otis McLeary"}]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/OtisMcLeary-123/safety-aware-lampc-cbf-reproduction"
Issues = "https://github.com/OtisMcLeary-123/safety-aware-lampc-cbf-reproduction/issues"

[project.scripts]
lampc-cbf = "lampc_cbf.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
llm = ["huggingface_hub>=0.34,<2"]
simulation = [
    "casadi==3.7.2",
    "do-mpc==5.1.1",
    "scipy>=1.15,<2",
    "panda-gym @ git+https://github.com/OtisMcLeary-123/Safe-panda-gym.git@c2c2bae9ee0b738fd7c5a5f6259a3a37da95718c",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
